tests/ui/reborrow/pin_mut_coerce_shared.stderr
error[E0308]: mismatched types
  --> $DIR/pin_mut_coerce_shared.rs:8:12
   |
LL |     method(a);
   |     ------ ^ types differ in mutability
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `Pin<&()>`
              found struct `Pin<&mut ()>`
note: function defined here
  --> $DIR/pin_mut_coerce_shared.rs:3:4
   |
LL | fn method(a: Pin<&()>) {}
   |    ^^^^^^ -----------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
